--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
 
   mysql:
     container_name: mysql
-    image: mysql:5.6:51
+    image: mysql:5.6 
     ports:
       - "3306:3306"
     restart: on-failure
@@ -33,7 +33,7 @@ services:
       MYSQL_ROOT_PASSWORD: Test@123
       MYSQL_DATABASE: bankappdb
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "mysql"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -46,7 +46,7 @@ services:
 volumes:
   mysql-vol:
     driver: local
-    
+
 networks:
   bankapp:
     driver: bridge
